# BookSmith_AI

./: .dockerignore  .gitignore  Docker-compose.yml  Dockerfile.backend  Dockerfile.frontend  README.md  pyproject.toml  report.md  requirements.txt
book/: outline.json
frontend/: pnpm-lock.yaml
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api-test/: page.tsx
frontend/app/generate/: page.tsx
frontend/components/: book-animation.tsx  generator-form.tsx  hero-section.tsx  navbar.tsx  preview-panel.tsx  pricing-section.tsx  progress-steps.tsx
frontend/lib/: api.ts
mcp_backend/: server.py
output/: book_final.md
src/my_project/: __init__.py  api.py  crew.py  main.py
src/my_project/config/: agents.yaml  tasks.yaml
src/my_project/tools/: __init__.py  book_tools.py  crewai_tools.py
