[project]
name = "my_project"
version = "0.1.0"
description = "my_project using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai-tools>=1.8.1",
    "crewai[google-genai,tools]>=0.80.0",
    "fastapi>=0.128.0",
    "google-generativeai>=0.8.3",
    "markdown>=3.10",
    "pydantic>=2.7.0",
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0.2",
    "requests>=2.32.5",
    "rich>=13.7.1",
    "tenacity>=8.2.3",
    "tqdm>=4.66.4",
    "uvicorn[standard]>=0.40.0",
    "weasyprint>=67.0",
]

[project.scripts]
my_project = "my_project.main:run"
run_crew = "my_project.main:run"
train = "my_project.main:train"
replay = "my_project.main:replay"
test = "my_project.main:test"
run_with_trigger = "my_project.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
